--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,10 +6,10 @@
 version: 2
 updates:
   - package-ecosystem: "pip-compile" # See documentation for possible values
-    directory: "src/azure-cli/" # Location of package manifests
+    directory: "/src/azure-cli/" # Location of package manifests
     schedule:
       interval: "daily"
   - package-ecosystem: "pip" # See documentation for possible values
-    directory: "src/azure-cli-core/" # Location of package manifests
+    directory: "/src/azure-cli-core/" # Location of package manifests
     schedule:
       interval: "daily"
