--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ updates:
     directory: "/src/azure-cli/" # Location of package manifests
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 0
   - package-ecosystem: "pip" # See documentation for possible values
     directory: "/src/azure-cli-core/" # Location of package manifests
     schedule:
