--- a/src/azure-cli/requirements.in
+++ b/src/azure-cli/requirements.in
@@ -1,7 +1,7 @@
 antlr4-python3-runtime~=4.13.1
 azure-appconfiguration~=1.1.1
 azure-batch~=14.0.0
-azure-cli-core=={}'.format(VERSION),
+azure-cli-core==2.57.0
 azure-cosmos~=3.0,>=3.0.2
 azure-data-tables==12.4.0
 azure-datalake-store~=0.0.49
